freebase: Fix typo in search query

The string array matches the GDataFreebaseSearchFilterType, using the
FilterNodeType was unintended, and TYPE_CONTAINER happened to match
GDATA_FREEBASE_SEARCH_FILTER_ALL.

https://bugzilla.gnome.org/show_bug.cgi?id=737541